<resources>
    <string name="app_name">My NewsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dawn">DAWN</string>
    <string name="cnn">CNN</string>
    <string name="bbc">BBC</string>
    <string name="skynews">SKYNEWS</string>
    <string name="menu_gallery">menu_gallery</string>
    <string name="menu_slideshow">menu_slideshow</string>
    <string name="menu_home">menu_home</string>
    <string name="sky">SKY</string>
    <string name="new_yorks">NEW YORKS</string>
    <string name="comming_soon">COMMING SOON</string>
    <string name="aljzera">ALJZERA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>