<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dawn"
            android:icon="@drawable/d"
            android:title="@string/dawn" />
        <item
            android:id="@+id/cnn"
            android:icon="@drawable/cop"
            android:title="@string/cnn" />
        <item
            android:id="@+id/bbc"
            android:icon="@drawable/b"
            android:title="@string/bbc" />
        <item
            android:id="@+id/sky"
            android:icon="@drawable/seee"
            android:title="@string/sky" />
        <item
            android:id="@+id/newyork"
            android:icon="@drawable/neww"
            android:title="@string/new_yorks" />
    </group>

</menu>