<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/dawn"
        android:name="com.example.mynavigationdrawer.ui.dawn.HomeFragment"
        android:label="@string/dawn"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/cnn"
        android:name="com.example.mynavigationdrawer.ui.cnn.GalleryFragment"
        android:label="@string/cnn"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/bbc"
        android:name="com.example.mynavigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/newyork"
        android:name="com.example.mynavigationdrawer.Fragment.NewYorksFragment"
        android:label="@string/new_yorks"
        tools:layout="@layout/fragment_new_yorks" />
    <fragment
        android:id="@+id/sky"
        android:name="com.example.mynavigationdrawer.Fragment.SkyFragment"
        android:label="@string/sky"
        tools:layout="@layout/fragment_sky" />
</navigation>